# dotfiles

./: .envrc  .gitattributes  .gitignore  .gitmodules  .mailmap  .sops.yaml  LICENSE  README.md  flake.nix  garnix.yaml  license.md  license.txt  readme.md  secrets.nix  setup.sh
.direnv/: flake-profile-1-link
.github/: funding.yaml
git/: config  gitconfig  gpg.gitconfig  smime.gitconfig
gpg/: gpg-agent.conf  gpg.conf  gpg.sh
hyper/: hyper.js
infrastructures/: flake.nix  providers.tf
iterm2/: StepBroBD.json
karabiner/: karabiner.json
launchd/: com.stepbrobd.airbuddy.plist  com.stepbrobd.aldente.plist  com.stepbrobd.bartender.plist  com.stepbrobd.coconutbattery.plist  com.stepbrobd.karabiner.plist  com.stepbrobd.raycast.plist
lib/: blueprint.nix  child-dirs-with-default.nix  deep-merge-attrs-list.nix  gen-host-modules.nix  gen-user-modules.nix  import-apply-with-args.nix  import-packages-tree.nix  import-packages-with.nix  importPackagesWith.nix  local-packages-from.nix  mk-colmena.nix  mk-dynamic-attrs.nix  mk-removed-option-module.nix  mk-system.nix  mkDynamicAttrs.nix  mkSystem.nix  secrets.yaml  terranix.nix
libs/: mkDynamicAttrs.nix  mkServer.nix  mkSystem.nix
nix/: darwin-rebuild.sh  nix.conf
nixpkgs/: home.nix  result
nvim/: init.lua  init.vim  lazy-lock.json
overlays/: default.nix  spotify.icns
parts/: checks.nix  colmena.nix  config-darwin.nix  config-nixos.nix  default.nix  devshells.nix  formatter.nix  hydrajobs.nix  lib.nix  module-darwin.nix  module-home.nix  (+5 more)
templates/python/: .gitignore  flake.nix  pyproject.toml  readme.md
(+610 files in other folders)
